update lots of stuff

--- a/template/index.ejs
+++ b/template/index.ejs
@@ -12,8 +12,7 @@
       async
       src="https://cdn.rawgit.com/GoogleChrome/pwacompat/v2.0.2/pwacompat.min.js"
       integrity="sha384-Hed93irwedHCADsxBJAVmlSMiqpE9BIQPp1XK7tqJh5olTEJTCJnlE7wRU3IDOz9"
-      crossorigin="anonymous"></script>
-    <% } %>
+      crossorigin="anonymous"></script><% } %>
     <%% if (htmlWebpackPlugin.options.description) { %%>
     <meta name="description" content="<%%= htmlWebpackPlugin.options.description %%>"/>
     <%% } %%>
